<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_above="@+id/buttonLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:id="@+id/title"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/textColorPrimary"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_description"
            android:id="@+id/description"
            android:textColor="@color/textColorPrimary"
            android:nextFocusDown="@+id/password"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="8dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/welcome_new_account" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/welcome_login" />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/app_name"
        app:title="@string/app_name"
        android:layout_gravity="top"
        android:visibility="visible" />

</RelativeLayout>