<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_title"
            android:id="@+id/title"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/textColorPrimary"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_description"
            android:textColor="@color/textColorPrimary"
            android:nextFocusDown="@+id/password"
            android:layout_marginBottom="8dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorPrimary"
                android:hint="@string/email"
                style="@style/Base.TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorPrimary"
                android:hint="@string/id_hint"
                style="@style/Base.TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorPrimary"
                android:hint="@string/password"
                style="@style/Base.TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorPrimary"
                android:hint="@string/confirmPassword"
                style="@style/Base.TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/showPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/showPassword"
                android:textColor="@color/textColorPrimary"
                android:layout_weight="1"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/create_account"
                android:layout_gravity="end" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:visibility="invisible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center" />
    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/app_name"
        app:title="@string/app_name"
        android:layout_gravity="top"
        android:visibility="visible" />

</FrameLayout>